Fix overflow bug - Analytics view - Activitty section

--- a/src/client/src/components/dashboard/analytics/Analytics.module.css
+++ b/src/client/src/components/dashboard/analytics/Analytics.module.css
@@ -141,6 +141,7 @@
   background-color: green;
   border-radius: 5px;
   padding: 1px 5px 1px 5px;
+  width: 104px;
 }
 
 @media only screen and (min-width: 1200px) {
